Update build scripts to fix tests launching